# DFlat

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  download_raw_data.sh  output.gds  readme.md  requirements.txt  setup.cfg  setup.py  setup_data_retrieval.py  setup_execute_get_data.py
.github/workflows/: pytest.yml
dflat/: .gitignore  __init__.py  train_model.py
dflat/GDSII/: __init__.py  assemble.py  gds_utils.py
dflat/GDSII_utilities/core/: gen_gds_fun.py  prep_util.py
dflat/data_structure/: __init__.py  fourier_params.py  render_params.py
dflat/data_structure/core/: fourier_param_utils.py  sensor_emva.py
dflat/fourier_layer/: .gitignore  __init__.py  fourier_layers.py  ms_initialization_utilities.py
dflat/initialize/: __init__.py  interleave.py  lenses.py
dflat/metasurface/: __init__.py  cell_library.py  datasets.py  latent.py  load_utils.py  nn.py  nn_siren.py  optical_model.py  reverse_lookup.py  trainer.py
dflat/metasurface_library/: .gitignore  __init__.py  initialization_utilities.py  libraryClass.py
dflat/neural_optical_layer/: __init__.py  neural_optical_layers.py
dflat/optimization_helper/: __init__.py  pipeline_class.py  train_helper.py
dflat/plot_utilities/: __init__.py  coordinate_vector.py  graphFunc.py  mp_format.py  vis.py
dflat/propagation/: __init__.py  propagators.py  propagators_legacy.py  psf.py  util.py
dflat/radial_tranforms/: __init__.py  hankel_ops.py  radial_ops.py
dflat/rcwa/: __init__.py  colburn_rcwa_utils.py  colburn_tensor_utils.py  material_utils.py  rcwa_solver.py
dflat/render/: __init__.py  fft_convolve.py  fronto_planar_renderer.py  ops_fft_convolve.py  util_meas.py  util_spectral.py
dflat/render_layer/: __init__.py  rendering_layers.py
dflat/tools/: __init__.py
docs/: Makefile  api.rst  conf.py  index.rst  introduction.rst  notes.txt
docs/api/: GDSII.rst  initialize.rst  propagation.rst  rcwa.rst
scripts/: config.yaml  demo.ipynb  field_propagation.ipynb  trainer.ipynb
source/: conf.py  index.rst
test_code/: Demo_polychromatic_focusing_nanofins.py
tests/: test_fourier_convolution.py  test_gds_assembly.py  test_hsi_to_rgb.py  test_initialize.py  test_metasurface.py  test_metasurface_datasets.py  test_metasurface_loader.py  test_metasurface_reverse_lookup.py  test_metasurface_util.py  test_propagation.py  test_propagation_cpu.py  test_propagation_legacy.py  test_radial_transforms.py  test_render.py
validations/: metasurface_heart_lens.pickle  propagation_vs_airy.py  simulate_heart_hologram.py
(+55 files in other folders)
