[metadata]
name = DFlat
version = 2.0.0
author = Dean Hazineh
author_email = dhazineh@g.harvard.edu
description = D-Flat is a forward and inverse design framework for flat optics. Although specially geared for the design of metasurfaces, it may be used broadly for end-to-end imaging and sensing task.
long_description_content_type = text/markdown
long_description = file: readme.md
url = https://github.com/DeanHazineh/DFlat
classifiers = 
	Programming Language :: Python :: 3
	License:: GNU GENERAL PUBLIC LICENSE v3.0
	Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
	pip
	pytest
	pytest-cov
	requests
	setuptools
	numpy
	torch
	torchvision
	torchaudio
	scipy
	matplotlib
	pyhank
	einops
	omegaconf
	tqdm
	pandas
	opencv-python
	gdspy
	mat73
