[metadata]
name = dflat_opt
version = 4.0.2
author = Dean Hazineh
author_email = dhazineh@g.harvard.edu
description = D-Flat is a forward and inverse design framework for flat optics. Although specially geared for the design of metasurfaces, it may be used broadly for end-to-end imaging and sensing task.
long_description_content_type = text/markdown
long_description = file: readme.md
url = https://github.com/DeanHazineh/DFlat
classifiers = 
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
	pytest
	pytest-cov
	requests
	setuptools
	numpy
	scipy
	matplotlib
	moviepy
	pyhank
	einops
	tqdm
	pandas
	opencv-python
	gdspy
	mat73
 	omegaconf
	natsort

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    sphinx-design
